# twineshaft

./: .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml
src/: CMakeLists.txt  main.c  twineshaft.c  twineshaft.h
src/platform/: CMakeLists.txt  clock.h  events.h  glwindow.h  types.h
src/platform/glx/: glxwindow.c
src/platform/posix/: clock.c  sleep.c
src/platform/win32/: clock.c  wglwindow.c
src/render/: render.h
src/render/gl/: glrender.c
tests/: CMakeLists.txt  testutils.c
tests/platform_test/: main.c  test_clock.c  test_glwindow.c
